--- a/six week project/Dangerous Oragami.html
+++ b/six week project/Dangerous Oragami.html
@@ -23,7 +23,7 @@
                 
             </ul> 
 	         </nav>
-			        <H2><div id=cent>What is Origami?</div></h2>
+			        <H2><div id=cent>What is Orgami?</div></h2>
                     <p><div id=info1>Origami is the Japanese word for paper folding.</div></p>
 					<p><div id=info2>ORI means to fold and KAMI means paper. Together, they form the word, "origami."</div></p>
 					<p><div id=info3>It is an art form that has been handed down from parent to child through many generations.</div></p>
